--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Async JavaScript</title>
 
-    <script src="code.js"></script>
+    <script src="redocode.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
