--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Async JavaScript</title>
+    <title>Github</title>
 
     <script src="code.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+       @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap'); 
+    </style>
 </head>
 
 <body>
@@ -16,7 +19,7 @@
     <button id="searchButton">Search</button>
     <hr />
     <h2>Results</h2>
-    <div id="resultsContainer">No results</div>
+    <div id="resultsContainer"></div>
 </body>
 
 </html>
