--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Github</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
 
     <script src="code.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-       @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap'); 
+      @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap");
     </style>
-</head>
+  </head>
 
-<body>
-    <h1>Github User Search</h1>
-    <input placeholder="Search for a user" id="searchUser" />
-    <button id="searchButton">Search</button>
-    <hr />
-    <h2>Results</h2>
-    <div id="resultsContainer"></div>
-</body>
-
+  <body>
+      <div class="info">
+          <h1>Github User Search</h1>
+          <input placeholder="Search for a user" id="searchUser" />
+          <button id="searchButton">Search</button>
+          <hr style="width: 100%"/>
+          <h2>Results</h2>
+      </div>
+    <div class="container">
+      <div class="row">
+        <div id="resultsContainer"></div>
+      </div>
+    </div>
+  </body>
 </html>
